Fix spacing

--- a/_sass/components/partners/_partners.scss
+++ b/_sass/components/partners/_partners.scss
@@ -37,13 +37,18 @@
 }
 
 #security-experience-container {
-    padding-bottom: 4rem;
-    padding-top: 2rem;
     @include at-media("desktop") {
       background: url(../img/partners/security-experience.svg) no-repeat top 11% right 7%;
       background-size: 35%;
     }
   }
+
+#our-services-container {
+    @include at-media("desktop") {
+        background: url(../img/partners/authorization-vs-authentication.svg) no-repeat top 15% left 7%;
+        background-size: 35%;
+      }
+}
   
   .security-list {
     font-size: 1rem;
